# rtos-motor-pixel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h
src/: buttons.c  buttons.cpp  buttons.h  hdc.c  hdc.cpp  hdc.h  hdc1080.c  hdc1080.h  interrupts.c  interrupts.h  main.c  main.cpp  pixel.c  pixel.cpp  pixel.h  seg_display.c  seg_display.cpp  seg_display.h  stepper.c  stepper.cpp  stepper.h  tasks.c  tasks.h
